updata linear and logstic Regression

--- a/01_basics/test.ipynb
+++ b/01_basics/test.ipynb
@@ -9,7 +9,284 @@
    "outputs": [],
    "source": [
     "import torchvision\n",
-    "import torchvision.transforms as transforms"
+    "import torchvision.transforms as transforms\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,0.5,0.5),(0.5,0.5,0.5))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
+    "                                        download=False, transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torchvision.datasets.cifar.CIFAR10 at 0x25525e75588>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=4,shuffle=True, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.utils.data.dataloader.DataLoader at 0x255285b31d0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dataiter = iter(trainloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "images, labels = dataiter.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 3, 32, 32])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       " 2\n",
+       " 0\n",
+       " 4\n",
+       " 1\n",
+       "[torch.LongTensor of size 4]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "(0 ,.,.) = \n",
+       " -0.5294 -0.5451 -0.5608  ...  -0.5922 -0.6157 -0.6471\n",
+       " -0.5608 -0.5686 -0.5843  ...  -0.5765 -0.6000 -0.6157\n",
+       " -0.5686 -0.5843 -0.5843  ...  -0.5373 -0.5529 -0.5765\n",
+       "           ...             ⋱             ...          \n",
+       "  0.0745  0.0431  0.0667  ...  -0.7804 -0.6627 -0.5294\n",
+       "  0.2235  0.5137  0.5216  ...  -0.8275 -0.7020 -0.5216\n",
+       "  0.7569  0.7725  0.6000  ...  -0.1216 -0.3098 -0.1765\n",
+       "\n",
+       "(1 ,.,.) = \n",
+       " -0.5529 -0.5686 -0.5843  ...  -0.5608 -0.5765 -0.6078\n",
+       " -0.5843 -0.5922 -0.6078  ...  -0.5451 -0.5686 -0.5922\n",
+       " -0.5922 -0.6078 -0.6078  ...  -0.5137 -0.5294 -0.5529\n",
+       "           ...             ⋱             ...          \n",
+       " -0.0824 -0.0667 -0.0039  ...  -0.8196 -0.6863 -0.5765\n",
+       " -0.0118  0.3412  0.3725  ...  -0.8980 -0.7647 -0.6000\n",
+       "  0.6392  0.6706  0.4745  ...  -0.2314 -0.4196 -0.2941\n",
+       "\n",
+       "(2 ,.,.) = \n",
+       " -0.4980 -0.5137 -0.5294  ...  -0.4745 -0.4902 -0.5216\n",
+       " -0.5294 -0.5373 -0.5529  ...  -0.4510 -0.4667 -0.4902\n",
+       " -0.5373 -0.5529 -0.5529  ...  -0.3961 -0.4118 -0.4353\n",
+       "           ...             ⋱             ...          \n",
+       " -0.2078 -0.1765 -0.0902  ...  -0.8431 -0.7176 -0.6078\n",
+       " -0.2314  0.1216  0.1765  ...  -0.9765 -0.8196 -0.6314\n",
+       "  0.5216  0.5294  0.3333  ...  -0.3490 -0.5137 -0.3569\n",
+       "[torch.FloatTensor of size 3x32x32]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "single_image = images[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "single_image = single_image/2 + 0.5 #unnormalize\n",
+    "np_image = single_image.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x255293c8390>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHVNJREFUeJztnVuMXNd1pv9Vl743m33hTRQlkhIVSZZkyqFlI9Z4nDg2\nFE8Gtl+E+CHQgxHmIWOMgcyD4AHGnnlyBmMHfhkD9FiwMvA4FiIbdhLDY1njRBF0IyVLFClKFkWR\nIptNNslmN5t9r6o1D1U0SGr/q4vNZjWZ/X8Aweq9au+za9dZdar2f9Za5u4QQuRHYaUnIIRYGeT8\nQmSKnF+ITJHzC5Epcn4hMkXOL0SmyPmFyBQ5vxCZIucXIlNKV9PZzB4C8C0ARQD/y92/Hj2/XC57\ne3tH2hjeaJg2Rl0sGs4iK7ct5V5IC44VTiN+BUEv0m+Jx6LjAeELoJalvayY4C5VZnGvLet49W5B\nv6Wc30EfdqyF+VlUKgtNrbIt9fZeMysC+A2ATwE4BmA3gC+4+xusT09Pr2+/d0fSVqtV6bFqtfQb\nFc3dCsGJWShSG4x/HtLTxfgXqGKR20plfqyiBXMMvrAVCsQWrEchWI9iocxtRT5/No/oAy/6oIze\n6+jcqVYryfZKZZ73qaT7AECVnIv1fnweCwvBmJ7uFx2rUllIth9881XMTE825fxX87X/AQAH3f2Q\nu88D+FsAn72K8YQQLeRqnH8jgKMX/X2s0SaEuAG4qt/8zWBmOwHsBID2tvZrfTghRJNczZV/GMCm\ni/6+udF2Ce6+y913uPuOUpn/fhRCtJarcf7dALaZ2RYzawPwJwB+ujzTEkJca5b8td/dK2b2HwD8\nX9Slvsfcff8ineguZbybG8gyBAt24EMNxSIFIb0rHu2WRzv6pWK0y877Ra/N2G5/tMseGCO1ohAp\nKmTn3oL1jYU0fg7Ecmp6/sXgPfMCn0c1OBULRT6PUiTbEZHAPRiPvc2xfnzpGE0/M4G7/wzAz65m\nDCHEyqA7/ITIFDm/EJki5xciU+T8QmSKnF+ITLnmd/hdjINLekuR8yL5qhbHXy1lSC6jMHkNsSxX\nCIJ3oqCZ8DObHC+MZQrkoUI0/2BQNmSosoYqVXSd4oMWiZwaC2LR+3nlAWhAIMECwEJ6jsVCEERU\nSM/jSqQ+XfmFyBQ5vxCZIucXIlPk/EJkipxfiExp6W4/YDzlVbhJyXZzo07Rjj63FYLd3DLZge/s\nbOPjRWmwguAddiwA2LCun9p6e9I5E+Zm5mif2dl0sBUATM3ydFc157v9NfLeLNSi9yXYZQ/e62qN\nz59FzdSWEAwExOpHNUgnVqgFqd7ImAtVPh4PnNJuvxBiEeT8QmSKnF+ITJHzC5Epcn4hMkXOL0Sm\ntFTqMwMKRMJy8IomS6kqFOaliwJqAvmtsy0t23V3cKnPF7hUtm6wk9p6Ovjn8rYtq6lt9ORosn3f\n3ld4n/FxalsI4q2KrPQagFUDa5Pta9dupn1KRT5eLZAIo5gZ1i2ImUEhMNainIbVQAYMqvkUyLlK\nqy8BmJfUJ4RYKnJ+ITJFzi9Epsj5hcgUOb8QmSLnFyJTrkrqM7PDACYBVAFU3H3HIj2WJRrp4vGo\nJcgvF+XHawvKa9Wrkr2fuTkuU3awukoA2spBNN3kSWp77ZX31UP9Lf/yL79Oto9NzdA+lagUViBt\nhZFxw0eT7VObp2mf27beRW3tHT3UVnX+nlUq6dcW5XiMJLYl5ZpEHH/Kzh4PDsVKvV2JFy2Hzv/7\n7n56GcYRQrQQfe0XIlOu1vkdwC/N7GUz27kcExJCtIar/dr/oLsPm9laAE+Z2Zvu/szFT2h8KOwE\ngLa2dJYZIUTruaorv7sPN/4fBfBjAA8knrPL3Xe4+45ymd8DL4RoLUt2fjPrNrPeC48BfBrAvuWa\nmBDi2nI1X/vXAfhxQ6IrAfg/7v7zxTpxGYVPhUX1RZKMRZF7JX6sUokn3CyRftF4C4FUVuriiTjv\n2LqJjzkzS23dfevTfYJkkJOTU/xYVS6JjU9MUtuRo2mp771Db9I+s9N8HnfedT+19fTxKEcYiSJd\nWvWvMEmnL7EMHDu/o/HoGXcFkvmSnd/dDwH44FL7CyFWFkl9QmSKnF+ITJHzC5Epcn4hMkXOL0Sm\ntDSBZ8EMbSQJZrXKQ5iYFGKB1McShQKLyHnlwEYiqYrBeA4uDa3q7KO2P3jw96ltduYstc0tEBmQ\nzB0A2tt5ItHpGZ6AdHj4FLXt25+W9P7puedon0NHjvPxAsnxgx96371lv6WrZ1Wy3St8vChyz6qR\nlMZtFQ/qCdLhgvGIdBslrr0cXfmFyBQ5vxCZIucXIlPk/EJkipxfiExpcbkuQ5nsjEclkrCE3X4r\n8fDhUhu3FYNdcWYrBwpBIciPt2FDOggHAAaHBqjt9Cmej292fi7Z3lHmuRS8ynei52d58E61wvPx\n9XSlj3fHbXfQPmNnJ6htcpJnijt48A1qu/e+Dyfb2wKFo1rhORmjcm4F5/0QqASsGl0xuDa7k/Gu\nIImfrvxCZIqcX4hMkfMLkSlyfiEyRc4vRKbI+YXIlJZKfTBDkUhwFgVTLKHEVyGQ88pBCvFiKZD6\niLRYCEqDdXdwGfDee+6ktvFxHjQzOTFGbYODQ8n2E8NHaJ/jx3n5LxYYAwDDR96ltj0vv5Zsf/vw\nKO0zMTFObav6eb7Dc2fPUNs7bx9Itt991320TzHI/8gUNgAIusFKwfnN3DCQDpnMrcAeIcSiyPmF\nyBQ5vxCZIucXIlPk/EJkipxfiExZVOozs8cA/DGAUXe/p9E2AOCHADYDOAzgYXfnieV+O1YBJSKz\nsTx94XhBVF8pKAoaFQwNo/qYDFjjc18/yKWygd4gB+E8X87eDi4bdRFJqZMrjjh6mEt281W+HgNr\neVTi5GQ6GnBsnMtyUSms8bM8qm91/xpqOzF8ONm+qquH9tm48XZqqwaBe8FpAARl2+BXfl7RUMBl\njur7HoCHLmt7FMDT7r4NwNONv4UQNxCLOr+7PwPg8rtKPgvg8cbjxwF8bpnnJYS4xiz1N/86dx9p\nPD6BesVeIcQNxFVv+Hn9xzr9cWJmO81sj5ntmZ/npaWFEK1lqc5/0sw2AEDjf3rDtrvvcvcd7r6j\nra1jiYcTQiw3S3X+nwJ4pPH4EQA/WZ7pCCFaRTNS3w8AfALAkJkdA/BVAF8H8ISZfRHAEQAPN3Mw\nKxja2nlEHaOwhGi6YnFpJbmKQZkvOg/jEtXvPfBBauvv4p+9L+3mZa0KzqW+ts7VyfZzU+nEngAw\nM8tLcv3Tsy9T2wMfe5DaVg0MJtsX3jpM+9SCZKe1Kp/j1GQQDbgqnQh15DiPcly1ikuH5XZeYq0W\nhPx5oMGZkfMqkJ25CNi81reo87v7F4jpk00fRQhx3aE7/ITIFDm/EJki5xciU+T8QmSKnF+ITGl5\nrb5SKX3IuEZeWppjEgkAlILxCmXer1jkNdyc1HBbv7ab9rnrzluprTrFk3SWFri0dXKEy1RjE2lJ\nr72DR7HV5nitvnPnea2+5194idomzqX7VYNItVogUxWNn6pe5VJrbSFd19Daudw7Pc0jKvs6evk8\ngtcW2ZhuVwjOb3bZjpLaNjmEEOJfO3J+ITJFzi9Epsj5hcgUOb8QmSLnFyJTWiv1gUfGlUpXHmkX\nSn1BxF8hSKYYRQrWCumos662YLy5c9RWCiIPB9ZyifDsiePU1j6fruO3buMG2ufoqfeorVzmp8j8\nLI8U9Gp6rQpBPBo7NwCgq4vLqfPzXKqcX0jLs6U5nolzbIxLfT39fB3jfJs8YpFF4kWy3ZVIegxd\n+YXIFDm/EJki5xciU+T8QmSKnF+ITGl5YE+Z5M9jAT8A34E3C3b0EQQKBTulhcBWJCpBdxcPBpqa\n4TviR06fp7Ynf8Fz5516921qW9OdzpB8YPww7fPq23y3f67Ad9l7e3gpsonzaUUiWqvOYEc/WkcE\nqk/N07bz03y8+dM0GTUGbtpEbe3tfP5xMTpyrobqAQtmUmCPEGIR5PxCZIqcX4hMkfMLkSlyfiEy\nRc4vRKY0U67rMQB/DGDU3e9ptH0NwJ8BuJCE7ivu/rPFxyqgra0taYvLZBGpL5LznNvMouCSoB8p\nJ9XVzeWr/kAamkU6CAcAbrrtd6htksekYNrT5dDmZnmF5P41vIDqR7bdTm3tmKa25/45nZ/w+DjP\nTXj+PJc+o/x+XT08r97UdDqH39zcFO3TEwSZnTs/QW2D7XweVM4DYOy1BefpItphUzRz5f8egIcS\n7X/t7tsb/xZ1fCHE9cWizu/uzwDBJUoIcUNyNb/5v2Rme83sMTPrX7YZCSFawlKd/9sAtgLYDmAE\nwDfYE81sp5ntMbM9s7P8N6IQorUsyfnd/aS7V72enuQ7AB4InrvL3Xe4+46Ojq6lzlMIscwsyfnN\n7OJcRp8HsG95piOEaBXNSH0/APAJAENmdgzAVwF8wsy2oy44HAbw580czMzQ1paWoqJ8fEY+oyJZ\nLorOi6IBi4VgSQrpSKpiG5fK2jrS0iYAbLmZR8X90cfvp7Yd991NbZXC6mT7r198jvY5NXKY2npK\n/Kfa3ASPfrt5KF0e7OQkH2/6HLet37CR2jq6uMTW1UXmcZLnQZw4y1/X6HFeKm2gbx21FYvp8x4A\nnOh2Yd6/4NxvlkWd392/kGj+7lUfWQixougOPyEyRc4vRKbI+YXIFDm/EJki5xciU1qawBNmgTwX\nJNUk8lsk50VKSCGS+gIbSKRgpco/Q+dmefjV7CkeMvHac89T2+iZEWq77QMfSLYPH+W3Yrz77mFq\nmwwi7ebnWBJJYHomXUJrirQDcdmtkeNcmhsYGqK2AokW7ergkZgzEzxy7/QoX/v5rekIQgDo7E5L\njgDg5BQJy39dYXsKXfmFyBQ5vxCZIucXIlPk/EJkipxfiEyR8wuRKa2t1Yd6ZF/SFkT1FQtpW9SH\ndAnHA4BSYDNPR+hNT/G6b1NTXDaKat3dt/0j1PbUPz5BbZPD6Tp+23+HR8XNT5+htndmuNR3bOwc\ntY1NpBOGdrTx9R3o5wmhrMBl3ZpziXDy3GSyvVTiUXbt7TwSs1bjkXYzMzxJancPn3+lmpZMnWmA\ni8yjWXTlFyJT5PxCZIqcX4hMkfMLkSlyfiEypaW7/Q4P8pLx3dDYxog+16IgosCGdBmn6Slegmpy\nmtu6Bvluf+fQWmpbNXQzte3b+0qyfabKFYmN69dT221btlDb7ld4sNDxE+PJ9jOTvEzWfIXXIZub\nCxSVCR5QUyG74rUaVzEKZV6uq7OHBwRVq3z+kTLFdvWjHH7OdvsDheBydOUXIlPk/EJkipxfiEyR\n8wuRKXJ+ITJFzi9EpjRTrmsTgL8BsA71FGG73P1bZjYA4IcANqNesuthdz8bDuZAjQQxRIE4KKb7\nGHi+vUgcDNQ8BGkBUSqll2t2lks8hw6lJS8A2LD+FmqbqZ2ittEJvsxj59PS4tERXoLq6CkeoHPP\nXXdQW3Gel9fq704v5NlzXLKbneW2EinzBgBd4OXSmAxbDVI1RkEz7cE8enp42bDaEsrHeXAW15wE\nA9Ee76eZK38FwF+6+90APgrgL8zsbgCPAnja3bcBeLrxtxDiBmFR53f3EXd/pfF4EsABABsBfBbA\n442nPQ7gc9dqkkKI5eeKfvOb2WYA9wN4EcA6d7+Qx/gE6j8LhBA3CE07v5n1AHgSwJfd/ZIfiV6/\nPzH5c8PMdprZHjPbMzPDfyMKIVpLU85vZmXUHf/77v6jRvNJM9vQsG8AkNxRcvdd7r7D3Xd0dnYt\nx5yFEMvAos5v9bxb3wVwwN2/eZHppwAeaTx+BMBPln96QohrRTNRfR8D8KcAXjezVxttXwHwdQBP\nmNkXARwB8PDiQzm8lpbFCsUgHx8RMArGhY1iINkVA60vkvpAjldq48t47BgvMzV6nEfTLUzxfHBt\nwVrNzaYj3NqCF3Z+nMuRb+xORwkCQH8vl7a616TLU3V08LJVb74zTG1TQVRiJTgPQEu9BRFzRI4G\ngAWyvgAwHeRrRJAz0EgZuCIpNQYABZbX8goiYBd1fnd/Flw2/2TTRxJCXFfoDj8hMkXOL0SmyPmF\nyBQ5vxCZIucXIlNam8DTnSY5ZNIFABRI1FOxGET1hVFU3BaNyeZYCJIzzs5xGeqNt45Q27ZNq6lt\naHANtfX1pCPcFqZ4wsquIFINRJoFgIUgMq7g6VNrwxo+954yT4554sQhajs9yV/bmKffaxb9CMTn\n4sICP9ab+5+ltr6+IWort6UTua5bx0usrVqdXkeLZM/L0JVfiEyR8wuRKXJ+ITJFzi9Epsj5hcgU\nOb8QmdJSqQ8AqtV0NFWhwKOsisW0jY3VsAbjBRpVAJUIQ1mRf74eHuZJNSfP8wixVYObqW39LaeT\n7QN9/Fi1WZ4Q9OTESWp79/gItXV1paMSJ8pcKluY4fLbh+69i9oe/PCd1HZuMj2PJ37xEu3zwv53\nqG0mqJ9nNT7/yhRPyFqqLSTbp85y2a6rnJ6Hk7FS6MovRKbI+YXIFDm/EJki5xciU+T8QmRKywN7\nKgvpHdFoV7xEcpnVjO/oFwp8R7/mfBfVAxuIzaJ8cOC2KskvBwAj4zxn3Viwo9t3U3pXfOgWHiQy\nP8YDjAZn+qite+gMtbVbOlio2MFLa/38n1+ltreeSasYALDuDq4EfP7Tn0m2Wy8PMLIuHqBz8ARX\nK8bPjlFbLVKmKun30+emaJexE+n3rEr8K4Wu/EJkipxfiEyR8wuRKXJ+ITJFzi9Epsj5hciURaU+\nM9sE4G9QL8HtAHa5+7fM7GsA/gzAhYiFr7j7z6Kx3B01khOuSuQOAFggOfxYmSMAsALPPVes8pdd\n4+ohqiQ/Wi0I9vAgH1w1kBWjeUS1yAbXpnP/dc1xierUCLedmZiktu33/y61rb/plmT7z5/6Fe1T\nDdZxPiih9T+/9yNqO3EufV5t334P7bNxyx3UduvtvETZSy/zYKGDB9+itlKxLdm+EMh283NpKbgW\nrNP7jtvEcyoA/tLdXzGzXgAvm9lTDdtfu/v/aPpoQojrhmZq9Y0AGGk8njSzAwD4HSNCiBuCK/rN\nb2abAdwP4MVG05fMbK+ZPWZm/cs8NyHENaRp5zezHgBPAviyu58D8G0AWwFsR/2bwTdIv51mtsfM\n9szN8bLTQojW0pTzm1kZdcf/vrv/CADc/aS7V929BuA7AB5I9XX3Xe6+w913tLfz+7qFEK1lUee3\neu6q7wI44O7fvKh9w0VP+zyAfcs/PSHEtaKZ3f6PAfhTAK+b2YWwq68A+IKZbUdd/jsM4M8XG8jh\nWCDRTR7k3HMQGZBIgABgBS6jGbhUBo+kufRylUq8j89zybEAPsehVbyE1rZb11Pb5Ol0tNf+t96g\nfc6e4fnlbtu2jdrWbkjLeQDw9LMvJNtfeJnPA4UyNbW38/fs/AyPfnvyJ3+fbF+3lq/huoFuajuw\n/3VqK1a4ZFoO8jxOT6f7RdGiJfItuhacU+8bY7EnuPuzQNJbQk1fCHF9ozv8hMgUOb8QmSLnFyJT\n5PxCZIqcX4hMaW25LgcqFRLVFyQ4rJEQt2oQ+jZd4TcUtbdxOaR7fprabh8YTM9jgUs8hXYu2a1d\nw5Nj9vdwaWjzTdw21z+UbB/q/z3ah60vAAwNpV8zALyyl9/a8cLzu5Pt5O0HACxUgmSnVf6elYM1\nnp9PR8b9w49/Qvts3ryW2ibPnaC28TEumfb19lDbxFT6/JmYOkf79Hd2pQ2BpHg5uvILkSlyfiEy\nRc4vRKbI+YXIFDm/EJki5xciU1pbq69Wg8/PJG1W4BLFwkLaVurkct7tW3nUVm9XJ7XV5nmE2Ec+\nnE7suDA3QfscPXKM2m4a5K+5r5u/NSdPHKW2obU3JdtX9QXJMWe4vHno4G94v2ne79899Klk+2v7\nDtA+x45zqezsBD/WfJVfw4qldOTn4RMn+TxGuZwHkoAWAGYXuK1U5glqK0RpLbYFUY7ltM0k9Qkh\nFkPOL0SmyPmFyBQ5vxCZIucXIlPk/EJkSkulvu6OIh64I11LrlLgUyl2pBMq/puP/1vaZ8MgT8I4\nfmqE2o4ceZfaht9Ly1SFMp/7+BiXlLZsSK8FAJw5yWWvapBk9OxYOhKsMsMjD9/7DZffjhwfprbB\nteuobagzPcd//+k/pH2KQWr3l3bvobZ9+9+ktonJtEQ4W+ZrODXNa+RValx+8yAx7PRMWuIGgGJb\n+nX39fPzo6sj3acgqU8IsRhyfiEyRc4vRKbI+YXIFDm/EJmy6G6/mXUAeAZAe+P5f+fuXzWzAQA/\nBLAZ9XJdD7v72fBgBcdgZzqKYdu9d/M5lNI52kozo7TPL558ntqmJ8epra9vFbVt2LQp2d7RyXPx\nlW+5mdpOj/Hl6ijzUmTFAv/MHhl+L9k+NspVB5udo7ZNm26lto4eHiB15vjxZPvmW3i+vc5gvHO3\npHMTAsDqjruorbcv3e/Xb3CF4/nde6mtGLhMMSgRNzfHA5MqSCsBC+1BObrutJrV/F5/c1f+OQB/\n4O4fRL0c90Nm9lEAjwJ42t23AXi68bcQ4gZhUef3OhdE4nLjnwP4LIDHG+2PA/jcNZmhEOKa0NRv\nfjMrNir0jgJ4yt1fBLDO3S/cLXMCAL/jQwhx3dGU87t71d23A7gZwANmds9ldgfStYHNbKeZ7TGz\nPZPTs1c9YSHE8nBFu/3uPg7gVwAeAnDSzDYAQOP/5O6bu+9y9x3uvqO3i9++KYRoLYs6v5mtMbPV\njcedAD4F4E0APwXwSONpjwDgJVCEENcdVv/GHjzB7D7UN/SKqH9YPOHu/83MBgE8AeAWAEdQl/rG\norHu+8Cd/vc/+E7SVihxkWJ0JB2IM36aS31TgZzX1s6DM4bW8tx/Z8bT0tzAIJehpqe4jOZBmayi\n8fdl6hzPGTg3M5lsHz9zhvYZHOCvuVDiuf9mg9Jm1Wpapurp5VLqTBD8cnaCv+bNW7ZSGytfNXGe\nBzqNT/Kfp72r+XtdKvJr6XuHD1Pb4XfTwWQnTvDzu3/1mmT73/38/2H0zNmmFL9FdX533wvg/kT7\nGQCfbOYgQojrD93hJ0SmyPmFyBQ5vxCZIucXIlPk/EJkyqJS37IezOwU6rIgAAwBON2yg3M0j0vR\nPC7lRpvHre6e1gEvo6XOf8mBzfa4+44VObjmoXloHvraL0SuyPmFyJSVdP5dK3jsi9E8LkXzuJR/\ntfNYsd/8QoiVRV/7hciUFXF+M3vIzN4ys4NmtmK5/8zssJm9bmavmhmvB7X8x33MzEbNbN9FbQNm\n9pSZvd34v3+F5vE1MxturMmrZvaZFsxjk5n9yszeMLP9ZvYfG+0tXZNgHi1dEzPrMLOXzOy1xjz+\na6N9edfD3Vv6D/XQ4HcAbAXQBuA1AHe3eh6NuRwGMLQCx/04gA8B2HdR238H8Gjj8aMA/mqF5vE1\nAP+pxeuxAcCHGo97AfwGwN2tXpNgHi1dE9ST8PY0HpcBvAjgo8u9Hitx5X8AwEF3P+Tu8wD+FvVk\noNng7s8AuDz3QcsTopJ5tBx3H3H3VxqPJwEcALARLV6TYB4txetc86S5K+H8GwEcvejvY1iBBW7g\nAH5pZi+b2c4VmsMFrqeEqF8ys72NnwXX/OfHxZjZZtTzR6xoktjL5gG0eE1akTQ39w2/B72emPSP\nAPyFmX18pScExAlRW8C3Uf9Jth3ACIBvtOrAZtYD4EkAX3b3S2qNt3JNEvNo+Zr4VSTNbZaVcP5h\nABeXvrm50dZy3H248f8ogB+j/pNkpWgqIeq1xt1PNk68GoDvoEVrYmZl1B3u++7+o0Zzy9ckNY+V\nWpPGsa84aW6zrITz7wawzcy2mFkbgD9BPRloSzGzbjPrvfAYwKcB7It7XVOui4SoF06uBp9HC9bE\nzAzAdwEccPdvXmRq6ZqwebR6TVqWNLdVO5iX7WZ+BvWd1HcA/OcVmsNW1JWG1wDsb+U8APwA9a+P\nC6jveXwRwCDqZc/eBvBLAAMrNI//DeB1AHsbJ9uGFszjQdS/wu4F8Grj32davSbBPFq6JgDuA/Dr\nxvH2AfgvjfZlXQ/d4SdEpuS+4SdEtsj5hcgUOb8QmSLnFyJT5PxCZIqcX4hMkfMLkSlyfiEy5f8D\niMiuc63poIUAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x25528fdf828>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(np.transpose(np_image,(1,2,0)))"
    ]
   },
   {
